syntax = "proto3";

option csharp_namespace = "JackSite.Notification.Grpc";

package notification;

// 通知服务
service NotificationService {
  // 发送注册验证邮件
  rpc SendRegistrationVerificationEmail (SendRegistrationVerificationEmailRequest) returns (SendEmailResponse);
  
  // 发送密码重置邮件
  rpc SendPasswordResetEmail (SendPasswordResetEmailRequest) returns (SendEmailResponse);
  
  // 发送欢迎邮件
  rpc SendWelcomeEmail (SendWelcomeEmailRequest) returns (SendEmailResponse);
  
  // 发送通知邮件
  rpc SendNotificationEmail (SendNotificationEmailRequest) returns (SendEmailResponse);
  
  // 获取邮件发送状态
  rpc GetEmailStatus (GetEmailStatusRequest) returns (GetEmailStatusResponse);
}

// 发送注册验证邮件请求
message SendRegistrationVerificationEmailRequest {
  string email = 1;
  string username = 2;
  string verification_token = 3;
}

// 发送密码重置邮件请求
message SendPasswordResetEmailRequest {
  string email = 1;
  string username = 2;
  string reset_token = 3;
}

// 发送欢迎邮件请求
message SendWelcomeEmailRequest {
  string email = 1;
  string username = 2;
}

// 发送通知邮件请求
message SendNotificationEmailRequest {
  string email = 1;
  string username = 2;
  string subject = 3;
  string message = 4;
}

// 发送邮件响应
message SendEmailResponse {
  bool success = 1;
  string message = 2;
  string email_id = 3;
}

// 获取邮件状态请求
message GetEmailStatusRequest {
  string email_id = 1;
}

// 获取邮件状态响应
message GetEmailStatusResponse {
  bool success = 1;
  string message = 2;
  EmailStatus status = 3;
  string email = 4;
  string email_type = 5;
  string created_at = 6;
  string sent_at = 7;
}

// 邮件状态枚举
enum EmailStatus {
  PENDING = 0;
  SENDING = 1;
  SENT = 2;
  FAILED = 3;
}